--- a/jupyter/numpy/level-1.ipynb
+++ b/jupyter/numpy/level-1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "0158e83e",
    "metadata": {},
    "outputs": [],
@@ -12,53 +12,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "id": "df60be3d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 0,  1,  2,  3,  4],\n",
-       "       [ 5,  6,  7,  8,  9],\n",
-       "       [10, 11, 12, 13, 14]])"
+       "array([[ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9],\n",
+       "       [10, 11, 12, 13, 14, 15, 16, 17, 18, 19],\n",
+       "       [20, 21, 22, 23, 24, 25, 26, 27, 28, 29],\n",
+       "       [30, 31, 32, 33, 34, 35, 36, 37, 38, 39],\n",
+       "       [40, 41, 42, 43, 44, 45, 46, 47, 48, 49]])"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "a = np.arange(15).reshape(3, 5)\n",
+    "a = np.arange(50).reshape(5, 10)\n",
     "a"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "id": "9baa063b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[0, 1, 2, 3, 4]])"
+       "array([0, 1, 2, 3, 4, 5, 6, 7, 8, 9])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "a[:1]"
+    "a[0,:10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "b6efc6ee",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[100,   1,   2,   3,   4,   5,   6,   7,   8,   9],\n",
+       "       [100,  11,  12,  13,  14,  15,  16,  17,  18,  19],\n",
+       "       [100,  21,  22,  23,  24,  25,  26,  27,  28,  29],\n",
+       "       [100,  31,  32,  33,  34,  35,  36,  37,  38,  39],\n",
+       "       [100,  41,  42,  43,  44,  45,  46,  47,  48,  49]])"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a[:,0]=100\n",
+    "a"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b6efc6ee",
+   "id": "ebce9943",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "32180d91",
    "metadata": {},
    "outputs": [],
    "source": []
